# bm

./: .gitignore  .gitmodules  config.bash.help  config.bash.run  config.cache  config.comm.run  config.e2fsprogs.run  config.find.run  config.libevent.run  config.libpwent.run  config.make.run  config.status  config.tmux.run  configure  configure.ac  configure.scan  submodules
etc/: script.sh  submodules
libpw/: checkret.cc
libpw.temp/: Makefile  checkret.hh  test  test.cc
